--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://localhost:1313/'
+baseURL = 'https://black-bush-004303010.6.azurestaticapps.net/'
 languageCode = 'en-us'
 title = '''Hi! I'm Denis'''
 theme = 'ananke'
