--- a/hugo.toml
+++ b/hugo.toml
@@ -12,30 +12,25 @@ theme = 'ananke'
 
   # English menu
   [[languages.en.menu.main]]
-    name = "💼 Work"
-    url = "/work/"
-    weight = 2
-
-  [[languages.en.menu.main]]
-    name = "🏃‍♂️ Sport"
-    url = "/sport/"
-    weight = 3
-  
-  [[languages.en.menu.main]]
-    name = "🌍 Travel"
-    url = "/travel/"
-    weight = 4
-  
-  [[languages.en.menu.main]]
-    name = "🌍 Posts"
-    url = "/posts/"
-    weight = 4
-
-  [[languages.en.menu.main]]
     name = "📄 CV"
-    url = "/cv/"
+    url = "/en/cv/"
     weight = 5
-
+  
+#  [[languages.en.menu.main]]
+#    name = "💼 Work"
+#    url = "/work/"
+#    weight = 2
+#
+#  [[languages.en.menu.main]]
+#    name = "🏃‍♂️ Sport"
+#    url = "/sport/"
+#    weight = 3
+#  
+#  [[languages.en.menu.main]]
+#    name = "🌍 Travel"
+#    url = "/travel/"
+#    weight = 4
+  
   [languages.ru]
     languageName = "🇷🇺 Русский"
     weight = 1
@@ -43,21 +38,21 @@ theme = 'ananke'
 
   # Russian menu
   [[languages.ru.menu.main]]
-    name = "💼 Работа"
-    url = "/work/"
-    weight = 2
-  
-  [[languages.ru.menu.main]]
-    name = "🏃‍♂️ Спорт"
-    url = "/sport/"
-    weight = 3
-  
-  [[languages.ru.menu.main]]
-    name = "🌍 Путешествия"
-    url = "/travel/"
-    weight = 4
-  
-  [[languages.ru.menu.main]]
     name = "📄 Резюме"
-    url = "/cv/"
+    url = "/ru/cv/"
     weight = 5
+  
+#  [[languages.ru.menu.main]]
+#    name = "💼 Работа"
+#    url = "/work/"
+#    weight = 2
+#  
+#  [[languages.ru.menu.main]]
+#    name = "🏃‍♂️ Спорт"
+#    url = "/sport/"
+#    weight = 3
+#  
+#  [[languages.ru.menu.main]]
+#    name = "🌍 Путешествия"
+#    url = "/travel/"
+#    weight = 4
